2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources: Add Mono.Rocks/Stream.cs to the build.
	* Mono.Rocks.Tests.dll.sources: Add Tests/Mono.Rocks.Tests/StreamTest.cs 
	  to the build.

2008-08-05  Jonathan Pryor  <jpryor@novell.com>

	* . (svn:ignore): Ignore generated files.
	* archive: Added; ignore generated files.
	* doc/**: Added; documentation stubs, Makefile.include to update the docs
	  and generate an HTML version of the output, etc.
	* ChangeLog: Added.
	* Makefile: include doc/Makefile.include to allow documentation generation.
